sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:11: error: value === is not a member of Boolean
		if(ech === false) {
                       ^