sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
	for(i<-getNombreValeurs()-2 to 0) {
		var ech = false;
		for(j<-0 to i) {
			if(plusPetit(j+1, j)) {
				echange(j, j+1);
				ech = true;
			}
		}
		if(ech === false) {
			return;
		}
	}
}
